# Web_Maintenance

./: .env.example  PRD.md  README.md  docker-compose.yml  dockerfile  init.sql
backend/: .gitignore  dockerfile  pyproject.toml  requirements.txt
backend/apis/gateway/app/: config.py  main.py
backend/apis/gateway/app/src/: database.py  models.py  schemas.py
backend/apis/gateway/app/src/routes/: machine.py  maintenance.py  part.py  team.py  used_part.py  user.py
backend/apis/login/app/: main.py
backend/apis/login/app/src/: route.py
backend/apis/machines/app/: config.py
backend/apis/machines/app/src/: database.py  models.py  route.py  schemas.py
backend/apis/maintenances/app/: config.py  main.py
backend/apis/maintenances/app/src/: database.py  models.py  route.py  schemas.py
backend/apis/maintenances/app/src/models/: maintenance.py  used_part.py
backend/apis/maintenances/app/src/routes/: maintenance.py  used_part.py
backend/apis/parts/app/: main.py
backend/apis/parts/app/src/: database.py  models.py  route.py  schemas.py
backend/apis/parts/app/src/models/: part.py  used_part.py
backend/apis/users/app/: config.py  main.py
backend/apis/users/app/src/: database.py  models.py  route.py  schemas.py
backend/apis/users/app/src/models/: team.py  user.py
backend/apis/users/app/src/routes/: team.py  user.py
backend/app/: main.py
backend/app/src/: config.py  database.py  main.py
backend/app/src/routes/: login.py  machines.py  storage.py  teams.py
backend/tests/: conftest.py  test_machines.py
mobile/: package-lock.json
(+102 files in other folders)
