[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend do projeto Web Maintenance"
authors = ["Kelvin Silvestre <kelvinsc7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
