[tool.poetry]
name = "app"
version = "0.1.0"
description = "Backend do projeto Web Maintenance"
authors = ["Kelvin Silvestre <kelvinsc7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
taskipy = "^1.14.0"

[tool.ruff]
line-length = 100
extend-exclude = ['__pycache__']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff . --diff'
format = 'ruff check . --fix && ruff format'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"